[REFACTOR] Modify tests according to the new code